--- a/css/styles.css
+++ b/css/styles.css
@@ -764,3 +764,62 @@ textarea{
     background-color: rgba(49, 208, 170, 1);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.footer-column-three{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: auto;
+    background-color: transparent;
+}
+
+.footer-subscribe-text{
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+
+.footer-form{
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+}
+
+.email-label{
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
+    border-radius: 4px;
+    color: white;
+    background-color: transparent;
+}
+.email-label::placeholder{
+    color: white;
+}
+
+.subscribe-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 165px;
+    height: 40px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    color: white;
+    border-radius: 4px;
+}
