--- a/css/styles.css
+++ b/css/styles.css
@@ -691,13 +691,12 @@ textarea{
     justify-content: flex-start;
     align-items: flex-start;
     align-content: flex-start;
-    margin-right: 120px;
+    
 }
 
 
 .footer-logo{
     display: inline-block;
-    margin-bottom: 16px;
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -705,15 +704,17 @@ textarea{
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-bottom: 16px;
 }
 .footer-logo-span {
     color: #f4f4fd;
 }
 .footer-text{
-    margin-top: 40px;
+    margin-top: 20px;
     max-width: 264px;
+    max-height: 100%;
     font-family: inherit;
-    font-size: 16px;
+    font-size: 12px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #F4F4FD;
@@ -729,6 +730,7 @@ textarea{
 .footer-sl-text{
     margin-bottom: 16px;
     max-width: 264px;
+    
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -787,22 +789,27 @@ textarea{
     display: flex;
     flex-direction: row;
     gap: 24px;
+    background: rgba(255,255,255,0);
+    margin: 0;
+    padding:0;
+    z-index: 0;
 }
 
-.email-label{
+.email-label::placeholder{
+    color: white;
+}
+
+.email-input{
     width: 264px;
     height: 40px;
     border: 1px solid #ffffff;
+    background-color: transparent;
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
     padding-left: 16px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
     border-radius: 4px;
-    color: white;
-    background-color: transparent;
-}
-.email-label::placeholder{
     color: white;
 }
 
@@ -822,4 +829,8 @@ textarea{
     border: none;
     color: white;
     border-radius: 4px;
+}
+
+.send-icon{
+    margin-left: 16px;
 }
