--- a/css/styles.css
+++ b/css/styles.css
@@ -468,195 +468,7 @@ img {
 }
 
 
-.modal-overlay{
-    background-color: rgba(46, 47, 66, 0.4);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 999;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-overlay.is-open{
-    opacity: 1;
-    pointer-events: all;
-}
-form, input, textarea{
-    font-family: inherit;
-}
 
-
-.form-label{
-    display: flex;
-    flex-direction: column;
-}
-.exit-button{
-    align-self: flex-end;
-    width: 24px;
-    height: 24px;
-    display: flex;
-    align-items: center;
-    justify-items: center;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    background-color: rgba(231, 233, 252, 1);
-    margin-bottom: 12px;
-}
-
-.form-header{
-    font-size: 16px;
-    line-height: 1.5;
-    font-weight: 500;
-    letter-spacing: 2%;
-    text-align: center;
-    margin-bottom: 12px;
-}
-
-
-.close-menu-icon{
-    width: 100%;
-    height: 100%;
-}
-
-.exit-button:hover, .exit-button:focus{
-    fill: white;
-    background-color: rgba(64, 75, 191, 1);
-    border:none;
-}
-.form-label{
-    gap: 4px;
-    margin-bottom: 12px;
-}
-
-.input-container{
-    position: relative;
-    display: inline-block;
-}
-.input-container input{
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 4px;
-    padding-left: 4px;
-    padding-right: 4px;
-    text-indent: 25px;
-    width: 100%;
-    height: 40px;
-}
-.input-container:focus-within{
-    fill: rgba(64, 75, 191, 1);
-    border: 1px solid rgba(64, 75, 191, 1);
-}
-.input-icon{
-    position: absolute;
-    pointer-events: none;
-    transform: translateY(-50%);
-    left: 12px;
-    top: 50%;
-    cursor: default;
-}
-textarea{
-    resize: none;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 4px;
-    padding-left: 4px;
-    padding-right: 4px;
-}
-.text-area::placeholder{
-    color: black;
-}
-
-.checkbox-class{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 8px;
-}
-
-.custom-checkbox{
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-}
-.checkbox-container{
-    display: block;
-    position: relative;
-    cursor: pointer;
-    user-select: none;
-    width: 20px;
-    height: 20px;
-}
-
-.checkmark{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 20px;
-    width: 20px;
-    border: 1px solid  rgba(46, 47, 66, 0.4);
-    border-radius: 4px;
-    z-index: 1;
-}
-
-.vector-class {
-    position: absolute;
-    top: 2px;
-    left: 2px;
-    z-index: 2;
-    opacity: 0;
-}
-
-.custom-checkbox:checked ~ .vector-class {
-        opacity: 1;
-}
-
-.custom-checkbox:checked ~.checkmark::after{
-    content: "";
-    position: absolute;
-    display: block;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 20px;
-    height: 20px;
-    background-color: rgba(64, 75, 191, 1);
-    overflow: hidden;
-    border-radius: 4px;
-}
-
-
-
-
-.checkbox-text{
-    display:flex;
-    gap: 3px;
-}
-.terms-link{
-    color: rgba(64, 75, 191, 1);
-}
-.terms-link:hover, .terms-link:focus {
-    text-decoration: underline;
-}
-
-
-.send-button{
-    align-self: center;
-    padding: 16px 32px 16px 32px;
-    width: 169px;
-    height: 56px;
-    border-radius: 4px;
-    border: none;
-    background-color: #4D5AE5;
-    color: #ffffff;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
 
 
 
@@ -823,4 +635,223 @@ textarea{
 
 .send-icon{
     margin-left: 16px;
+}
+
+
+.modal-overlay{
+    background-color: rgba(46, 47, 66, 0.4);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-overlay.is-open{
+    opacity: 1;
+    pointer-events: all;
+}
+
+
+.feedback-form{
+    padding: 72px 24px 24px 24px; 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    width: 408px;
+    max-height: 584px;
+    background: #fcfcfc;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2); 
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+
+.exit-button{
+    width: 24px;
+    height: 24px;
+    top: 24px;
+    right: 24px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    cursor:pointer;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    background-color: rgba(231, 233, 252, 1);
+    margin-bottom: 12px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-header{
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 500;
+    letter-spacing: 2%;
+    text-align: center;
+    margin-bottom: 16px;
+    color: #2E2F42;
+
+}
+
+.form-container{
+    margin-bottom: 8px;
+}
+
+.close-menu-icon{
+    width: 100%;
+    height: 100%;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.exit-button:hover, .exit-button:focus{
+    fill: white;
+    background-color: rgba(64, 75, 191, 1);
+    border:none;
+}
+
+.form-label{
+    display: block; 
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    margin-bottom: 4px;
+}
+
+.form-label{
+    gap: 4px;
+    margin-bottom: 12px;
+}
+
+.input-container{
+    position: relative;
+    display: inline-block;
+}
+.input-container input{
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    padding-left: 4px;
+    padding-right: 4px;
+    text-indent: 25px;
+    width: 100%;
+    height: 40px;
+}
+.input-container:focus-within{
+    fill: rgba(64, 75, 191, 1);
+    border: 1px solid rgba(64, 75, 191, 1);
+}
+.input-icon{
+    position: absolute;
+    pointer-events: none;
+    transform: translateY(-50%);
+    left: 12px;
+    top: 50%;
+    cursor: default;
+}
+textarea{
+    resize: none;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    padding-left: 4px;
+    padding-right: 4px;
+}
+.text-area::placeholder{
+    color: black;
+}
+
+.checkbox-class{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 8px;
+}
+
+.custom-checkbox{
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+.checkbox-container{
+    display: block;
+    position: relative;
+    cursor: pointer;
+    user-select: none;
+    width: 20px;
+    height: 20px;
+}
+
+.checkmark{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    border: 1px solid  rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    z-index: 1;
+}
+
+.vector-class {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    z-index: 2;
+    opacity: 0;
+}
+
+.custom-checkbox:checked ~ .vector-class {
+        opacity: 1;
+}
+
+.custom-checkbox:checked ~.checkmark::after{
+    content: "";
+    position: absolute;
+    display: block;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 20px;
+    height: 20px;
+    background-color: rgba(64, 75, 191, 1);
+    overflow: hidden;
+    border-radius: 4px;
+}
+
+
+.checkbox-text{
+    display:flex;
+    gap: 3px;
+}
+.terms-link{
+    color: rgba(64, 75, 191, 1);
+}
+.terms-link:hover, .terms-link:focus {
+    text-decoration: underline;
+}
+
+
+.send-button{
+    align-self: center;
+    padding: 16px 32px 16px 32px;
+    width: 169px;
+    height: 56px;
+    border-radius: 4px;
+    border: none;
+    background-color: #4D5AE5;
+    color: #ffffff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
