--- a/css/styles.css
+++ b/css/styles.css
@@ -666,7 +666,7 @@ img {
     left: 50%;
     transform: translate(-50%, -50%); 
     width: 408px;
-    max-height: 584px;
+    min-height: 584px;
     background: #fcfcfc;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2); 
     border-radius: 4px;
@@ -701,6 +701,7 @@ img {
     text-align: center;
     margin-bottom: 16px;
     color: #2E2F42;
+    letter-spacing: 0.02em;
 
 }
 
@@ -720,7 +721,7 @@ img {
     border:none;
 }
 
-.form-label{
+.name-label{
     display: block; 
     font-size: 12px;
     line-height: 1.17;
@@ -728,36 +729,31 @@ img {
     color: #8e8f99;
     margin-bottom: 4px;
 }
-
-.form-label{
-    gap: 4px;
-    margin-bottom: 12px;
-}
-
 .input-container{
     position: relative;
-    display: inline-block;
-}
-.input-container input{
     border: 1px solid rgba(46, 47, 66, 0.4);
+    background-color: transparent;
     border-radius: 4px;
-    padding-left: 4px;
-    padding-right: 4px;
+    padding-left: 38px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     text-indent: 25px;
     width: 100%;
     height: 40px;
 }
+
 .input-container:focus-within{
-    fill: rgba(64, 75, 191, 1);
-    border: 1px solid rgba(64, 75, 191, 1);
+    fill: #4D5AE5;
+    border-color: #4D5AE5;
 }
 .input-icon{
     position: absolute;
     pointer-events: none;
     transform: translateY(-50%);
-    left: 12px;
+    left: 16px;
     top: 50%;
     cursor: default;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 textarea{
     resize: none;
