--- a/css/styles.css
+++ b/css/styles.css
@@ -731,6 +731,11 @@ img {
 }
 .input-container{
     position: relative;
+}
+
+
+
+.name-text-container{
     border: 1px solid rgba(46, 47, 66, 0.4);
     background-color: transparent;
     border-radius: 4px;
@@ -742,10 +747,6 @@ img {
     height: 40px;
 }
 
-.input-container:focus-within{
-    fill: #4D5AE5;
-    border-color: #4D5AE5;
-}
 .input-icon{
     position: absolute;
     pointer-events: none;
@@ -755,6 +756,12 @@ img {
     cursor: default;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.name-text-container:focus-within{
+    fill: #4D5AE5;
+    border-color: #4D5AE5;
+}
+
 textarea{
     resize: none;
     border: 1px solid rgba(46, 47, 66, 0.4);
