--- a/css/styles.css
+++ b/css/styles.css
@@ -758,8 +758,11 @@ img {
 }
 
 .name-text-container:focus-within{
-    fill: #4D5AE5;
     border-color: #4D5AE5;
+}
+
+.name-text-container:focus-within .input-icon{
+    fill: #4D5AE5;
 }
 
 textarea{
