--- a/css/styles.css
+++ b/css/styles.css
@@ -757,24 +757,42 @@ img {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.name-text-container:focus-within{
+.name-text-container:focus-within, .name-text-container:focus-within .input-icon{
+    fill: #4D5AE5;
     border-color: #4D5AE5;
 }
 
-.name-text-container:focus-within .input-icon{
-    fill: #4D5AE5;
+.textarea-container{
+    margin-bottom: 16px
 }
 
-textarea{
-    resize: none;
+.text-area{
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
-    padding-left: 4px;
-    padding-right: 4px;
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent; 
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.text-area::placeholder{
-    color: black;
+.text-area:focus-within{
+    border-color: #4D5AE5;
 }
+
+.checkbox-class{
+    margin-bottom: 24px;
+}
+
+
+
+
+
 
 .checkbox-class{
     display: flex;
@@ -790,7 +808,7 @@ textarea{
     height: 0;
     width: 0;
 }
-.checkbox-container{
+.checkbox-container{s
     display: block;
     position: relative;
     cursor: pointer;
