--- a/css/styles.css
+++ b/css/styles.css
@@ -800,7 +800,7 @@ img {
 
 }
 
-input[type="checkbox"]:checked + span{
+.visually-hidden input[type="checkbox"]:checked + .checkmark{
     background-color:#404bbf;
     border: none;
     fill:#F4F4FD;
