--- a/css/styles.css
+++ b/css/styles.css
@@ -800,7 +800,7 @@ img {
 
 }
 
-.checkbox-class input[type="checkbox"]:checked + .checkmark{
+input[type="checkbox"]:checked{
     background-color:#404bbf;
     border: none;
     fill:#F4F4FD;
