--- a/css/styles.css
+++ b/css/styles.css
@@ -649,15 +649,18 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+    /*
     opacity: 0;
     pointer-events: none;
+    */
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+/*
 .modal-overlay.is-open{
     opacity: 1;
     pointer-events: all;
 }
-
+*/
 
 .feedback-form{
     padding: 72px 24px 24px 24px; 
@@ -800,7 +803,7 @@ img {
 
 }
 
-input[type="checkbox"]:checked + .vector-class{
+.visually-hidden:checked + .checkbox-container .checkmark{
     background-color:#404bbf;
     border: none;
     fill:#F4F4FD;
