--- a/css/styles.css
+++ b/css/styles.css
@@ -803,10 +803,14 @@ img {
 
 }
 
-.visually-hidden:checked + .checkbox-container .checkmark{
+.visually-hidden:checked + .checkbox-container > .checkmark{
     background-color:#404bbf;
     border: none;
     fill:#F4F4FD;
+}
+
+.visually-hidden:checked + .checkbox-container .checkmark .vector-class {
+    opacity: 1;
 }
 
 .checkmark{
