--- a/css/styles.css
+++ b/css/styles.css
@@ -512,11 +512,10 @@ img {
     color: #f4f4fd;
 }
 .footer-text{
-    margin-top: 20px;
     max-width: 264px;
     max-height: 100%;
     font-family: inherit;
-    font-size: 12px;
+    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #F4F4FD;
@@ -649,18 +648,15 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    /*
     opacity: 0;
     pointer-events: none;
-    */
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-/*
+
 .modal-overlay.is-open{
     opacity: 1;
     pointer-events: all;
 }
-*/
 
 .feedback-form{
     padding: 72px 24px 24px 24px; 
@@ -713,8 +709,6 @@ img {
 }
 
 .close-menu-icon{
-    width: 100%;
-    height: 100%;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
@@ -828,14 +822,14 @@ img {
 
 .terms-link{
     color: #4d5ae5;
-}
-.terms-link:hover, .terms-link:focus {
     text-decoration: underline;
 }
 
 
+
 .send-button{
     display: block;
+    margin: 0 auto;
     min-width: 169px;
     height: 56px;
     font-family: "Roboto", sans-serif;
